feat: Add resource planning tools and comprehensive documentation
- Add resource calculator script for lab capacity planning
- Add resource requirements to all labs (Labs 2-12)
- Create Grafana monitoring dashboard guide
- Add port conflict warnings (especially Lab 8)
- Fix git repository configuration
- Move REPOSITORY-STRUCTURE.md to docs/
- Update scripts README with calculator documentation

--- a/labs/03.5-kubernetes-under-the-hood.md
+++ b/labs/03.5-kubernetes-under-the-hood.md
@@ -698,6 +698,89 @@ kubectl delete namespace controller-demo
 
 ---
 
+
+---
+
+## 🎖️ Expert Mode: Control Plane Performance Tuning
+
+> 💡 **Optional Challenge** — Ready to tune production clusters? **This is NOT required** to progress, but completing it unlocks the **⚙️ Control Plane Architect** badge!
+
+**⏱️ Time**: +25 minutes  
+**🎯 Difficulty**: ⭐⭐⭐⭐⭐ (Expert)  
+**📋 Prerequisites**: Complete Lab 3.5 etcd Deep Dive section above
+
+### The Scenario
+
+Your API server is timing out. `kubectl get pods` takes 5+ seconds. Prometheus shows high etcd disk latency:
+
+```bash
+# etcd_disk_wal_fsync_duration_seconds: 45ms (should be <10ms)
+# etcd_mvcc_db_total_size_in_bytes: 8.5GB (massive!)
+```
+
+**Your cluster is slow because etcd is overwhelmed.**
+
+### Challenge: Tune etcd for Production Performance
+
+**Your Mission**:
+1. Check etcd metrics (disk latency, DB size)
+2. Compact old revisions
+3. Defragment to reclaim space
+4. Configure auto-compaction
+5. Optimize disk I/O
+
+**Hints**:
+```bash
+# Port-forward to etcd
+kubectl port-forward -n kube-system etcd-<node> 2379:2379
+
+# Check metrics
+curl http://localhost:2379/metrics | grep etcd_disk
+
+# Check DB size
+ETCDCTL_API=3 etcdctl endpoint status --write-out=table
+
+# Compact (keeps last 1000 revisions)
+ETCDCTL_API=3 etcdctl compact <revision-1000>
+
+# Defragment
+ETCDCTL_API=3 etcdctl defrag --cluster
+```
+
+### Expected Outcome
+
+- ✅ etcd disk latency < 10ms
+- ✅ Database size reduced by 50%+
+- ✅ API server response time < 500ms
+- ✅ Auto-compaction configured
+
+### Deep Dive: What You're Learning
+
+**Production Skills**:
+- etcd performance diagnostics
+- Compaction strategies
+- Disk I/O optimization
+- Control plane tuning
+
+**Interview Topics**:
+- "etcd is slow, how do you diagnose and fix it?"
+- "What's the difference between compaction and defragmentation?"
+- "How do you monitor control plane health?"
+
+**Real-World Impact**: **Reddit's 2023 outage** was caused by etcd running out of space due to no auto-compaction. Database grew to 12GB, API server became unresponsive. Engineers who knew this saved the platform.
+
+### Complete Guide
+
+For detailed etcd tuning procedures, see:  
+**[Senior K8s Debugging Guide: etcd Performance](../../docs/reference/senior-k8s-debugging.md#21-etcd-performance-bottlenecks)**
+
+### Badge Unlocked! 🎉
+
+Complete this challenge and you've earned:  
+**⚙️ Control Plane Architect** — You can tune production Kubernetes clusters!
+
+**Track your progress**: [Lab Progress Tracker](../../docs/learning/LAB-PROGRESS.md#expert-badges)
+
 ## 🎓 What's Next?
 
 Now that you understand Kubernetes internals, you can:
