Fix broken relative path links across documentation
- Corrected relative paths in labs/ directory from ../../docs/ to ../docs/
- Fixed paths in docs/reference/ files from ../labs/ to ../../labs/
- Updated docs/REPOSITORY-STRUCTURE.md to include proper ../ prefixes
- All internal documentation links now working properly

--- a/labs/03.5-kubernetes-under-the-hood.md
+++ b/labs/03.5-kubernetes-under-the-hood.md
@@ -772,14 +772,14 @@ ETCDCTL_API=3 etcdctl defrag --cluster
 ### Complete Guide
 
 For detailed etcd tuning procedures, see:  
-**[Senior K8s Debugging Guide: etcd Performance](../../docs/reference/senior-k8s-debugging.md#21-etcd-performance-bottlenecks)**
+**[Senior K8s Debugging Guide: etcd Performance](../docs/reference/senior-k8s-debugging.md#21-etcd-performance-bottlenecks)**
 
 ### Badge Unlocked! 🎉
 
 Complete this challenge and you've earned:  
 **⚙️ Control Plane Architect** — You can tune production Kubernetes clusters!
 
-**Track your progress**: [Lab Progress Tracker](../../docs/learning/LAB-PROGRESS.md#expert-badges)
+**Track your progress**: [Lab Progress Tracker](../docs/learning/LAB-PROGRESS.md#expert-badges)
 
 ## 🎓 What's Next?
 
