docs: enterprise restructure with numbered folders, metadata, and migration guide

--- a/labs/08.5-multi-tenancy.md
+++ b/labs/08.5-multi-tenancy.md
@@ -844,9 +844,9 @@ spec:
 
 ## 🔄 What's Next?
 
-- **[Lab 9.5: Complex Microservices](09.5-microservices.md)** → Service mesh for multi-tenant apps *(coming soon)*
+- **[Lab 9.5: Complex Microservices](09.5-complex-microservices.md)** → Service mesh for multi-tenant apps
 - **[Lab 11: GitOps with ArgoCD](11-gitops-argocd.md)** → Automate tenant onboarding
-- **[Lab 5: RBAC Deep Dive](05-rbac.md)** → Advanced permission models
+- **[Lab 6: Medical Security](06-medical-security.md)** → Advanced RBAC and security patterns
 
 ---
 
